Archive2/ad/69118bd7b57e8c/output
main.cpp:26:59: error: expected primary-expression before ',' token
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                           ^
main.cpp:21:10: error: invalid use of non-static data member 'Vertex<Tn, P>::t'
     T t[n];
          ^
main.cpp:26:61: error: from this location
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                             ^
main.cpp:26:63: error: there are no arguments to 'offsetof' that depend on a template parameter, so a declaration of 'offsetof' must be available [-fpermissive]
     static constexpr unsigned int byteoffset = offsetof( U, t );
                                                               ^
main.cpp:26:63: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
main.cpp:26:63: error: redeclaration of 'constexpr const unsigned int Vertex<Tn, P>::byteoffset'
main.cpp:25:35: note: previous declaration 'constexpr const unsigned int Vertex<Tn, P>::byteoffset'
     static constexpr unsigned int byteoffset = offsetof2( U, t );
                                   ^
main.cpp:27:1: error: expected ';' after struct definition
 }
 ^
